fix customize buttons on tablet

--- a/public/prod/website.css
+++ b/public/prod/website.css
@@ -1103,7 +1103,7 @@ header {
   @media only screen and (max-width: 1024px) and (min-width: 415px) {
     .customize-content {
       width: 100vw;
-      height: 185vh;
+      height: 198vh;
       z-index: -1; } }
   .customize-content .customizeTitle h2 {
     font-size: 6vh;
@@ -1181,8 +1181,8 @@ header {
       width: 20%;
       height: 5vh;
       color: white;
-      border-radius: 1.5vw;
-      padding: 1.5vh 2vw 1.5vh 2vw; }
+      border-radius: 2vw;
+      padding: 1.25vh 2vw 1.25vh 2vw; }
       @media only screen and (max-width: 1024px) and (min-width: 415px) {
         .content .btn-holder-customize a {
           padding: 1.5vh 2vw 1.5vh 2vw; } }
