--- a/public/stylesheets/sass/_customize.sass
+++ b/public/stylesheets/sass/_customize.sass
@@ -12,7 +12,7 @@ header
     z-index: -1
   @include tablet
     width: 100vw
-    height: 185vh
+    height: 198vh
     z-index: -1
   .customizeTitle
     h2
@@ -89,8 +89,8 @@ header
       width: 20%
       height: 5vh
       color: white
-      border-radius: 1.5vw
-      padding: 1.5vh 2vw 1.5vh 2vw
+      border-radius: 2vw
+      padding: 1.25vh 2vw 1.25vh 2vw
       @include tablet
         // width: 15%
         padding: 1.5vh 2vw 1.5vh 2vw
